# BIRTHUB-360-INNOVATION

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  AGENT_SNAPSHOT.json  AUDITORIA.md  CHECKLIST_LOG.md  CHECKLIST_MASTER.md  CODEOWNERS  OPERATIONS.md  README.md  RELEASE_1.0.md  RELEASE_NOTES.md  REPORT_TECHNICAL_DEBT.md  SECURITY.md  audit.sh  ci-local.ps1  ciclo_04.txt  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  evaluate.js  items.txt  make_report.py  make_report_c5.py  make_report_c6.py  package.json  plan.md  playwright.config.ts  pnpm-lock.yaml  pytest.ini  relatorio_auditoria.html  requirements-test.txt  test_eval.sh  test_eval2.sh  test_eval3.sh  test_eval4.sh  test_eval5.sh  test_eval6.sh  test_eval7.sh  (+6 more)
.github/: CODEOWNERS  pull_request_template.md  settings.yml
agents/: README.md  conftest.py
agents/shared/: __init__.py  base_agent.py  commercial_contracts.py  commercial_playbook.py  db.py  db_pool.py  errors.py  live_tool_client.py  logger.py  node_worker.js  operational_contract.py  pyproject.toml  rate_limiter.py  requirements.txt  sast_scanner.py  security.py  tool_runtime.py
agents/shared/tests/: conftest.py  test_base_agent.py  test_commercial_playbook_prompts.py  test_db_pool.py  test_operational_contract.py  test_rate_limiter.py
docs/: ADR-011-RBAC-Strategy.md  ARCHITECTURE.md  ARQUITETURA_CANONICA.md  AUDITORIA_E_APROVACOES.md  Analysis-Authorization-Gaps.md  Analysis-Session-Duration.md  CORPORATE_IDENTITY.md  Checklist-Session-Security.md  DEPRECACAO_E_CUTOVER.md  EXECUCAO_CODEX_100_ITENS.md  LGPD_OPERACIONAL.md  (+40 more)
(+1141 files in other folders)
