[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "birthub-shared"
version = "0.1.0"
description = "Shared utilities for BirtHub agents"
requires-python = ">=3.12"
dependencies = [
  "langgraph>=0.0.10",
  "google-generativeai>=0.3.2",
  "asyncpg>=0.29.0",
  "python-dotenv>=1.0.0",
  "cuid2>=2.0.0"
]

[tool.setuptools.packages.find]
where = [".."]
include = ["agents.shared*"]
